[workspace]
resolver = "3"
members = [
    "crates/bbuilder",
    "crates/spec",
    "crates/runtime-docker-compose",
    "crates/runtime-trait",
    "crates/catalog",
    "crates/template",
    "crates/babel",
    "crates/fetcher"
]

[workspace.dependencies]
spec = { path = "crates/spec" }
runtime-docker-compose = { path = "crates/runtime-docker-compose" }
runtime-trait = { path = "crates/runtime-trait" }
catalog = { path = "crates/catalog" }
template = { path = "crates/template" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
rmp-serde = "1.0"
tonic = { version = "0.12", default-features = false }
tokio = { version = "1.40.0", features = ["full"] }
eyre = "0.6.12"
async-trait = "0.1.89"
serde_json = "1.0.145"
include_dir = "0.7"
tinytemplate = "1.2"
askama = "0.14.0"
