[package]
name = "bbuilder"
version = "0.1.0"
edition = "2024"

[dependencies]
spec.workspace = true
runtime-docker-compose.workspace = true
runtime-trait.workspace = true
tokio.workspace = true
eyre.workspace = true
serde_json.workspace = true
serde.workspace = true
catalog.workspace = true

[[bin]]
name = "bbuilder"
path = "bin/main.rs"
