[package]
name = "fetcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fetcher"
path = "bin/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
anyhow = "1.0"
url = "2.5"
flate2 = "1.0"
tar = "0.4"
