[package]
name = "fetcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fetcher"
path = "bin/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
anyhow = "1.0"
url = "2.5"
flate2 = "1.0"
tar = "0.4"
